2000-05-26  Michael Meeks  <michael@helixcode.com>

	* echo.oafinfo: fix misuse of IDL:Empty that was screwing an oaf test.

2000-03-26  Miguel de Icaza  <miguel@helixcode.com>

	* README: 

2000-04-01  Timur Bakeyev <timur@gnu.org>

	* Makefile.am: Add missed -I$(top_srcdir)/bonobo to the INCLUDES.
	
2000-03-26  Miguel de Icaza  <miguel@helixcode.com>

	* New directory. Contains a sample skeleton for creating Bonobo
	components.
