@@ -1,3 +1,9 @@
+2000-07-12  Michael Meeks  <michael@helixcode.com>
+
+	* container.c (sample_app_shutdown): unref the ui_handler.
+	(main): hook in & add obejct_shutdown (sample_app_remove_component):
+	remove ourselfs from the container
+
 2000-07-10  Michael Meeks  <michael@helixcode.com>
 
 	* component.c (component_del): unref the client site too.
