@@ -1,3 +1,7 @@
+2000-07-12  Michael Meeks  <michael@helixcode.com>
+
+	* echo.c (echo_new): Kill gtk_object_destroy.
+
 2000-05-26  Michael Meeks  <michael@helixcode.com>
 
 	* echo.oafinfo: fix misuse of IDL:Empty that was screwing an oaf test.
